TEST_PROGRAMS/INVALID/AMIEL_KOLLEK/bad_addition.min
# This invalid program has a hanging '+' operator

var x: int;
var y: int;
var z: int;

x = 10;
y = 20;
z = x + y +;

print z;

